Add unit tests, README.md and Dockerfile.